[gd_scene load_steps=15 format=3 uid="uid://v6dhvujxcsh6"]

[ext_resource type="Theme" uid="uid://ctit5j25ljd8l" path="res://addons/AIdot/Res/Agents/GodotAssistant/MaoChat.tres" id="1_iyo4l"]
[ext_resource type="Script" uid="uid://uu3gvhx7muwl" path="res://addons/AIdot/Lib/Agent/Core/ChatAgent.gd" id="2_iyo4l"]
[ext_resource type="Script" uid="uid://c3ih05162xtgp" path="res://addons/AIdot/Res/Agents/GodotAssistant/mao_chat.gd" id="2_u66ub"]
[ext_resource type="Script" uid="uid://fnl1bv1fqvkc" path="res://addons/AIdot/Lib/Agent/Abilities/Memory/LongMemory.gd" id="3_72awx"]
[ext_resource type="Resource" path="user://maochat/maochat.tres" id="4_72awx"]
[ext_resource type="Script" uid="uid://c2s3b16r1y8k1" path="res://addons/AIdot/Lib/Agent/Abilities/Memory/AgentMemory.gd" id="4_mh0w6"]
[ext_resource type="Script" uid="uid://4foy4md0lrl6" path="res://addons/AIdot/Lib/Agent/Abilities/Action/ToolBag.gd" id="5_et82f"]
[ext_resource type="PackedScene" uid="uid://c0u1lhabrv1hu" path="res://addons/AIdot/Res/Agents/GodotAssistant/ChatUnit.tscn" id="6_ms0qc"]
[ext_resource type="Script" uid="uid://c4o1c1coxagsu" path="res://addons/AIdot/Lib/Agent/Core/UserAgent.gd" id="7_u66ub"]
[ext_resource type="PackedScene" uid="uid://dyjydh0m6oxq5" path="res://addons/AIdot/Res/Agents/GodotAssistant/ServerUnit.tscn" id="8_6hfhg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nvmlr"]

[sub_resource type="Resource" id="Resource_et82f"]
script = ExtResource("3_72awx")

[sub_resource type="Resource" id="Resource_ms0qc"]
script = ExtResource("4_mh0w6")
memory_mod = 0
RAG = false
sys_prompt = {}
_history = []
max_character = 10000
_long = SubResource("Resource_et82f")

[sub_resource type="Resource" id="Resource_mh0w6"]
script = ExtResource("5_et82f")
bag_show = PackedStringArray()
add = ""
remove = ""

[node name="Maodot" type="TabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_iyo4l")
theme_override_styles/panel = SubResource("StyleBoxEmpty_nvmlr")
current_tab = 0
script = ExtResource("2_u66ub")

[node name="MaoChat" type="MarginContainer" parent="."]
layout_mode = 2
metadata/_tab_index = 0

[node name="MaoChat" type="VBoxContainer" parent="MaoChat"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MaoChat/MaoChat"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ChatBot" type="Node" parent="MaoChat/MaoChat/ScrollContainer"]
script = ExtResource("2_iyo4l")
model = ExtResource("4_72awx")
memory = SubResource("Resource_ms0qc")
auto_save_memory = true
memory_save_dir = "user://maochat"
tool_bag = SubResource("Resource_mh0w6")
agent_id = "MaoChatBot"
character_name = "MaoBot"
metadata/_custom_type_script = "uid://uu3gvhx7muwl"

[node name="ChatList" type="VBoxContainer" parent="MaoChat/MaoChat/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChatUnit" parent="MaoChat/MaoChat/ScrollContainer/ChatList" instance=ExtResource("6_ms0qc")]
layout_mode = 2

[node name="Input" type="MarginContainer" parent="MaoChat/MaoChat"]
layout_mode = 2

[node name="Input" type="HBoxContainer" parent="MaoChat/MaoChat/Input"]
layout_mode = 2

[node name="UserAgent" type="Node" parent="MaoChat/MaoChat/Input/Input"]
script = ExtResource("7_u66ub")
agent_id = "MaodotUser"
role = "user"
metadata/_custom_type_script = "uid://c4o1c1coxagsu"

[node name="InputBox" type="TextEdit" parent="MaoChat/MaoChat/Input/Input"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
wrap_mode = 1
autowrap_mode = 1
scroll_smooth = true
scroll_fit_content_width = true
caret_blink = true
draw_tabs = true
draw_spaces = true

[node name="Send" type="Button" parent="MaoChat/MaoChat/Input/Input"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8
text = "Enter"

[node name="IdlePan" type="PanelContainer" parent="MaoChat/MaoChat/Input"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="Idle" type="RichTextLabel" parent="MaoChat/MaoChat/Input/IdlePan"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="Config" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="APIConfig" type="VBoxContainer" parent="Config"]
layout_mode = 2

[node name="Select" type="HBoxContainer" parent="Config/APIConfig"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="Config/APIConfig/Select"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Model: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Type" type="OptionButton" parent="Config/APIConfig/Select"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
fit_to_longest_item = false
item_count = 4
popup/item_0/text = "DEFAULT"
popup/item_0/id = 0
popup/item_1/text = "GPT"
popup/item_1/id = 1
popup/item_2/text = "DEEPSEEK"
popup/item_2/id = 2
popup/item_3/text = "QWEN"
popup/item_3/id = 3

[node name="LLM" type="OptionButton" parent="Config/APIConfig/Select"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
fit_to_longest_item = false

[node name="CLLM" type="LineEdit" parent="Config/APIConfig/Select"]
visible = false
layout_mode = 2

[node name="APIUrl" type="HBoxContainer" parent="Config/APIConfig"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="Config/APIConfig/APIUrl"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "API Url: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Url" type="LineEdit" parent="Config/APIConfig/APIUrl"]
layout_mode = 2
size_flags_horizontal = 3
text = "http://47.88.65.188:8405/v1"
clear_button_enabled = true
caret_blink = true

[node name="APIKey" type="HBoxContainer" parent="Config/APIConfig"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="Config/APIConfig/APIKey"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "API Key: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key" type="LineEdit" parent="Config/APIConfig/APIKey"]
layout_mode = 2
size_flags_horizontal = 3
text = "***REMOVED***"
clear_button_enabled = true
caret_blink = true
secret = true

[node name="Path" type="HBoxContainer" parent="Config/APIConfig"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="UseRes" type="CheckBox" parent="Config/APIConfig/Path"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Use Res"

[node name="Path" type="LineEdit" parent="Config/APIConfig/Path"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonBox" type="HBoxContainer" parent="Config/APIConfig"]
layout_mode = 2
alignment = 1

[node name="Save" type="Button" parent="Config/APIConfig/ButtonBox"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "Save as default"

[node name="Set" type="Button" parent="Config/APIConfig/ButtonBox"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Set"

[node name="MCP" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MCP" type="VBoxContainer" parent="MCP"]
layout_mode = 2

[node name="Label" type="Label" parent="MCP/MCP"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "⚠Attention⚠: The MCP is not yet fully developed and is currently under testing."
autowrap_mode = 1

[node name="ButtonBox" type="HBoxContainer" parent="MCP/MCP"]
layout_mode = 2
alignment = 1

[node name="AddServer" type="Button" parent="MCP/MCP/ButtonBox"]
layout_mode = 2
text = "Add New MCP Server"

[node name="ServerBox" type="ScrollContainer" parent="MCP/MCP"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ServerList" type="VBoxContainer" parent="MCP/MCP/ServerBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ServerUnit" parent="MCP/MCP/ServerBox/ServerList" instance=ExtResource("8_6hfhg")]
layout_mode = 2

[connection signal="pressed" from="MaoChat/MaoChat/Input/Input/Send" to="." method="_on_send_pressed"]
[connection signal="item_selected" from="Config/APIConfig/Select/Type" to="." method="_on_type_item_selected"]
[connection signal="pressed" from="Config/APIConfig/Select/Type" to="." method="_on_type_pressed"]
[connection signal="toggled" from="Config/APIConfig/Path/UseRes" to="." method="_on_use_res_toggled"]
[connection signal="pressed" from="Config/APIConfig/ButtonBox/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Config/APIConfig/ButtonBox/Set" to="." method="_on_set_pressed"]
[connection signal="pressed" from="MCP/MCP/ButtonBox/AddServer" to="." method="_on_add_server_pressed"]
